# phased-array-radar

./: .clang-format  .gitignore  .gitmodules  configure.sh  meson.build  readme.md
STM32_StdLib/CMSIS/DeviceSupport/startup/: startup_stm32f10x_md.s
app/: console_commands.c  isr.c  main.c
cross_files/: stm32f103c8t6.ini  stm32f10x.ini  toolchain.ini
cross_files/debugger/: cmsis-dap.ini  stlink.ini
hal/: dma_channel_mapping.h  stm32_spi.h
linker_sct/: linker.ld  linker_new.ld  linker_ram.ld  linker_ram_new.ld
proj_files/: STM32F103xx.svd  config_enable_all  download_demo.sh  workspace_demo.json
start_files/: init_calls.s  startup_stm32f10x_md.c  sys_funcs.c
start_files/stack_trace/: stack_trace.c  stack_trace.h
